<resources>
    <string name="app_name">Virtual Post-It</string>

    <!--Toolbar-->
    <string name="label_sign_up">Sign Up</string>
    <string name="label_login">Login</string>
    <string name="label_welcome">Virtual Post-It</string>

    <!--textbox hints-->
    <string name="hint_fullname">Full name</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_email">Enter your e-mail</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_current_location">Current Location</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_profile_password">Password</string>
    <string name="hint_verify_password">Verify Password</string>
    <string name="hint_forgot_password_email">Write your email here...</string>

    <!--Links-->
    <string name="link_login">Already a member? Login</string>
    <string name="link_signup">Don\'t have an account? Sign up</string>
    <string name="link_forgot_password">Forgot password?</string>

    <!--Button text-->
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_send_email">Send Email</string>
    <string name="btn_create_account">Create Account</string>

    <!--Toasts-->
    <string name="toast_created_succesfully">Account created successfully!</string>
    <string name="toast_created_unsuccesfully">Error on creating account!</string>

    <!--keys-->
    <string name="google_maps_api_key">AIzaSyCAZXOFxlgwHMn4U63Phzey1SIZzR2PVoQ</string>

    <!--Chooser intent title-->
    <string name="choose_direction_app">Titleeeee</string>

    <!--Collections-->
    <string name="collection_users">Users</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="collection_favorite_places">Favorite Places</string>
    <string name="go_back">GO BACK</string>
    <string name="go">GO</string>

    <!--Spinner Items-->
    <string-array name="types_of_places">
        <item> </item>
        <item>Museums</item>
        <item>Castles</item>
        <item>Parks</item>
        <item>Gas stations</item>
        <item>Restaurants</item>
    </string-array>

    <string-array name="place_type">
        <item> </item>
        <item>museum</item>
        <item>castle</item>
        <item>park</item>
        <item>gas</item>
        <item>restaurant</item>
    </string-array>

</resources>
